# darwinwallet

./: .gitignore  .project  AndroidManifest.xml  README.md  proguard.cfg  project.properties
jni/: Android.mk  Application.mk  build.sh  jni_recognizer.cpp
jni/NativeVision/: CMakeLists.txt  NativeVision.kdev4  imgTrainer.cpp  imgTrainer.h  lsh.hpp  main.cpp  make_patches.py  speaker.cpp  speaker.h  test.cpp  us_old_patches.yaml  vision.cpp  vision.h  webcam_test.cpp
jni/NativeVision/.kdev4/: NativeVision.kdev4
res/layout/: main.xml  settings.xml  tip.xml  tips_and_tricks.xml
res/menu/: main.xml
res/values/: attrs.xml  language_packs.xml  strings.xml  tips_and_tricks.xml
res/values-ru/: language_packs.xml  strings.xml  tips_and_tricks.xml
src/com/ndu/mobile/darwinwallet/: AutoFocusModes.java  AutoFocuser.java  BillRecognizerActivity.java  CurrencyInfo.java  IAutoFocusEvent.java  IRecognitionEvent.java  Preview.java  RecognitionResult.java  Recognizer.java  SettingsActivity.java  TipsArrayAdapter.java  TipsnTricksActivity.java  Voice.java
src/org/opencv/android/: CameraBridgeViewBase.java
